- fixed freeze issue when using off canvas menu by adding "overflow-y:scroll!important;" to the base.css

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -59,6 +59,7 @@
 }
 
 body {
+  overflow-y:scroll!important;
   min-height: 100vh;
   color: var(--color-text);
   background: var(--color-background);
